--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,22 @@
 {
   "hosting": {
     "public": "public",
+    "rewrites": [
+      {
+        "source": "/timestamp",
+        "function": "app"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ],
+    "source": "functions"
   }
 }
